Mario Frasca                                            20 Jan 2000-14 Feb 2000
Paul Nasrat           pauln@truemesh.com                29 Oct 2001-24 Apr 2002
Per Olofsson          MagerValp@cling.gu.se             25 Feb 2000
Peter L Vachuska      pvachusk@nconnect.net             13 Aug 2001
Richard Wallman       murkygoth@murkygoth.uklinux.net    2 Apr 2002
Riley Williams        Riley@Williams.Name               16 Nov 1998-28 Apr 2002
Roman Festchook       roma@polesye.net                  27 Oct 2001
Simon Weijgers        simon@weijgers.com                16 Sep 1998-15 Nov 1999
Simon Wood                                               6 Jan 2000-12 Jan 2000
Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001

-------------------------------------------------------------------------------

Sun Apr 28 22:55:56 BST 2002	Riley Williams <Riley@Williams.Name>

	* Enabled init_timer() and add_timer() routines. For some reason,
	  they were #if 0'd out of the source code, but references still
	  existed in routines that were not so treated.
	* Detailed location of FIXME comments in `make lint` output.

Sun Apr 28 21:54:19 BST 2002	Riley Williams <Riley@Williams.Name>

	* Removed redundant kill_proc function, as it is implemented
	  under the name kill_process instead.
	* Verified that all kernel/*.c files other than kernel/printk.c
	  are clean as far as `splint -weak` is concerned.
	* Detected a bug in init/main.c where sys_open is called with
	  only two parameters when three are expected. Inserted FIXME
	  comment summarising the problem as I can't currently fix it.
	* Fixed one bug in serial console - it tried to open /dev/ttys0
	  when the actual device is /dev/ttyS0 instead.
	* Verified that all arch/i86/kernel/*.[ch] files are clean as
	  far as `sprint -weak` is concerned.
	* Verified that current codebase both compiles and boots on my
	  286 based laptop.

Sun Apr 28 14:49:59 BST 2002	Riley Williams <Riley@Williams.Name>
